--- a/src/Views/home/index.twig
+++ b/src/Views/home/index.twig
@@ -2,6 +2,7 @@
 
  {% block styles %}
      <link rel="stylesheet" href="/assets/css/pages/home/index.css">
+     <link rel="stylesheet" href="/assets/css/pages/home/chatbot.css">
  {% endblock %}
 
  {% block content %}
