--- a/src/Views/layouts/partial/header.twig
+++ b/src/Views/layouts/partial/header.twig
@@ -113,19 +113,12 @@
                             <a href="/teacher/classes/manage" class="mobile-link">Gerenciar Turmas</a>
                             <a href="/teacher/courses" class="mobile-link">Gerenciar Cursos</a>
                         {% else %}
-                            <a href="/dashboard/aluno" class="mobile-link">Painel do Aluno</a>
+                            <a href="/my-courses" class="mobile-link">Meus Cursos</a>
                             <a href="/courses" class="mobile-link">Explorar Cursos</a>
                         {% endif %}
                     </div>
                 </div>
 
-                <div class="mobile-menu-section">
-                     <button class="mobile-menu-section-toggle" aria-expanded="false"
-                             aria-controls="mobile-section-compromissos">
-                         <i class="fas fa-tasks"></i> Compromissos
-                         <i class="fas fa-chevron-down arrow"></i>
-                     </button>
-                </div>
 
                 <hr class="mobile-menu-divider">
                 <a href="/profile" class="mobile-link">
